# AppTecnico3.0

./: Codici_C14000_C12000.xlsx  Codici_C14010_C12010_C10500.xlsx  Codici_C4080_ok.csv  Codici_C4080_ok.xlsx  Codici_C6100_C6085.xlsx  Codici_C6100_ok.xlsx  README.md  addon.py  check_data.py  check_errors.py  check_port.py  docker-compose.yml  railway.toml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  backend_error.txt  build_error.txt  clean_run.ps1
backend/migrations/: 20241231000000_add_faulty_part_isolation.sql
backend/src/: handlers.rs  handlers_debug.rs  main.rs  models.rs
docs/: Codici_C4080_C4070_C4065.xlsx  Codici_C7100_C7090.xlsx
frontend/: lint_log.txt  package-lock.json  package.json  schema.sql
frontend/app/: layout.tsx  page.tsx
frontend/app/actions/: import.ts  search.ts
frontend/app/admin/import/: page.tsx
frontend/components/ThemeRegistry/: theme.ts
frontend/components/ui/: AutocompleteSearch.tsx  DipSwitchViewer.tsx  ErrorCard.tsx
frontend/lib/: redis.ts
scripts/: debug_pdf_sw3.py  dump_page_text.py  generate_colony.py  import_dipsw_pdf.py  import_via_api.js  normalize_dipsw.js  parse_dipsw.py  sync_excel_direct.js
